# pi-bot

./: README.md
api/: Dockerfile  requirements.txt
api/app/: main.py
api/app/routes/: health.py  solve.py  upload.py
executor/: Dockerfile  entrypoint.sh  requirements.txt  run_executor.py
prompts/: codegen.md  explain.md  parser.md
tests/: runtest.py  sample.py  test.md  test_health.py  test_workflow.py
worker/: Dockerfile  __init__.py  jobs.py  llm_wrapper.py  orchestrator.py  pyproject.toml  requirements.txt  safety.py  sample_result.json  sample_structured.json  samplecode.py  setup.py  streamlit_app.py  tasks.py  test_e2e.py  utils.py  worker.py  ws.html
